@@ -9,8 +9,7 @@
 #pragma once
 
 
-#include <array>
-#include  <vector>
+#include <f5/memory.hpp>
 
 
 namespace fostlib {
@@ -18,84 +17,7 @@ namespace fostlib {
 
     /// A non-owning view of part of an array of V
     template<typename V>
-    class array_view {
-        const V *m_data;
-        std::size_t m_size;
-    public:
-        /// The underlying pointer type
-        using pointer_type = const V*;
-
-        /// Default construct an empty buffer
-        array_view()
-        : m_data(nullptr), m_size(0u) {
-        }
-
-        /// Construct from a vector like collection that has data and size
-        /// members
-        array_view(const std::vector<V> &v)
-        : m_data(v.data()), m_size(v.size()) {
-        }
-        template<std::size_t N>
-        array_view(const std::array<V, N> &v)
-        : m_data(v.data()), m_size(N) {
-        }
-        /// Construct from an array
-        array_view(const V *a, std::size_t items)
-        : m_data(a), m_size(items) {
-        }
-
-        /// The start of the data array
-        pointer_type data() const {
-            return m_data;
-        }
-        /// The number of items in the array
-        std::size_t size() const {
-            return m_size;
-        }
-
-        /// Return a slice of this array
-        array_view slice(std::size_t start) {
-            return array_view(m_data + start, m_size - start);
-        }
-        array_view slice(std::size_t start, std::size_t items) {
-            return array_view(m_data + start, items);
-        }
-
-        /// Index into the arraay
-        const V &operator [] (std::size_t index) {
-            return data()[index];
-        }
-
-        /// Constant iterator
-        using const_iterator = const V *;
-        /// Start iterator
-        const_iterator begin() const {
-            return data();
-        }
-        /// End iterator
-        const_iterator end() const {
-            return data() + size();
-        }
-
-        /// Reverse const iterator
-        using const_reverse_iterator = std::reverse_iterator<const_iterator>;
-        /// Start at the end
-        const_reverse_iterator rbegin() const {
-            return const_reverse_iterator(end());
-        }
-        /// End at the beginning
-        const_reverse_iterator rend() const {
-            return const_reverse_iterator(begin());
-        }
-
-        /// Are two buffers equal
-        bool operator == (const array_view av) const {
-            return data() == av.data() && size() == av.size();
-        }
-        bool operator != (const array_view av) const {
-            return data() != av.data() || size() != size();
-        }
-    };
+    using array_view = f5::array_view<V>;
 
 
 }
